# marketmind-open

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
api/: pyproject.toml
api/src/marketmind_api/: config.py  deps.py  logging.py  main.py  rate_limit.py  repo.py
api/src/marketmind_api/routes/: admin.py  backtests.py  content.py  ftr.py  health.py  jobs.py  overfitting.py  strategies.py  trader.py  trader_admin.py
api/src/marketmind_api/trader/: __init__.py  read.py
api/tests/: conftest.py  test_admin.py  test_backtests.py  test_content.py  test_cors.py  test_health.py  test_jobs.py  test_overfitting.py  test_rate_limit.py  test_strategies.py  test_trader_admin_routes.py  test_trader_routes.py
docs/: INTEGRATION_PLAN.md  architecture.md  extraction-prompt.md  project_log.md  strategy-spec.md  v1.2_retrospective.md
infra/: .env.example  api.Dockerfile  web.Dockerfile  worker.Dockerfile
scripts/: trader_seed_strategy.py  transfer_demos.py
shared/: pyproject.toml
shared/scripts/: export_json_schema.py
shared/src/marketmind_shared/: __init__.py  _version.py  rate_limits.py  urls.py
shared/src/marketmind_shared/schemas/: __init__.py  backtest_metrics.py  backtest_run.py  jobs.py  overfitting.py  trader.py
shared/src/marketmind_shared/schemas/content/: __init__.py  models.py
shared/src/marketmind_shared/schemas/extraction_report/: __init__.py  report.py  rules.py  verdict.py
shared/src/marketmind_shared/schemas/strategy_spec/: __init__.py  common.py  conditions.py  costs.py  entry.py  errors.py  exit.py  expressions.py  filters.py  indicators.py  introspection.py  legs.py  metadata.py  sizing.py  spec.py  validator.py
shared/src/marketmind_shared/trader/: __init__.py  money.py  time.py
shared/tests/: test_content_schemas.py  test_extraction_report.py  test_schema_export.py  test_schemas.py  test_trader_schemas.py
tests/: conftest.py  test_backtest_control.py  test_backtest_integration.py  test_backtest_regression.py  test_backtest_supertrend.py  test_backtest_turtle.py  test_db_integration.py  test_e2e_dummy_job.py
workers/: pyproject.toml
workers/data/: dsr_backfill_v2.json
workers/scripts/: backfill_dsr_v2.py  fetch_eurusd_2025_fixture.py  fetch_perp_fixture.py  phase_e4_pair_hunt.py  phase_e5b_trend_hunt.py  phase_e6_carry_hunt.py
workers/src/marketmind_workers/: config.py  logging.py  worker.py
workers/src/marketmind_workers/backtest/: __init__.py  author_comparison.py  benchmark.py  downsample.py  engine.py  exit_attribution.py  fee_model.py  indicators.py  iterative.py  iterative_live.py  metrics.py  perp_carry.py  perp_pairs.py  perp_trend.py  session_filter.py  slippage_model.py  trade_history.py  translator.py
workers/src/marketmind_workers/db/: __init__.py  migrations.py  repo.py
workers/src/marketmind_workers/ftr/: __init__.py  report.py
workers/src/marketmind_workers/ftr/backtest/: costs.py  event_engine.py  vector_engine.py
workers/src/marketmind_workers/ftr/config/: settings.py  venue_profiles.py
workers/src/marketmind_workers/ftr/data/: fetch_all.py  ohlcv.py  quality.py  recorder.py  recorder_fixtures.py
workers/src/marketmind_workers/ftr/features/: hourly.py  meta.py  micro.py  shifting.py  splits.py
workers/src/marketmind_workers/ftr/strategies/: liquidity_overlay.py  ml_hourly.py  ofi_research.py  records.py  specs.py  trend_portfolio.py
workers/src/marketmind_workers/ftr/trader/: execution_mode.py  guards.py  paper_broker.py  persistence.py  public_exchange.py  runner.py
workers/src/marketmind_workers/ftr/validation/: baselines.py  gates.py  metrics.py  montecarlo.py  runner.py
workers/src/marketmind_workers/jobs/: __init__.py  backtest.py  dummy.py  extract_strategy.py  ingest_article.py  ingest_raw_text.py  ingest_youtube.py  overfitting_analysis.py  transcribe.py
workers/src/marketmind_workers/observability/: __init__.py  daily_summary.py  models.py  queries.py  render.py
workers/src/marketmind_workers/overfitting/: __init__.py  composite.py  deflated_sharpe.py  monte_carlo.py  parameter_sweep.py  walk_forward.py
workers/src/marketmind_workers/services/: __init__.py  extract.py  extraction_prompt.py  ingest.py  llm.py  market_data.py  transcribe.py
workers/src/marketmind_workers/trader/: __init__.py  alerts.py  config.py  drift.py  exchanges.py  exchanges_oanda.py  execution.py  heartbeat.py  ingestion.py  jobs.py  locks.py  portfolio.py  risk.py  runner.py  session_skip.py  signal_engine.py
workers/src/marketmind_workers/trader/templates/: __init__.py  base.py  bb_mean_reversion.py  breakout.py  ma_trend.py  rsi_mean_reversion.py  spec_template.py  vcb.py
workers/tests/: conftest.py  ftr_helpers.py  test_adapter_factory.py  test_author_comparison.py  test_backtest_t1.py  test_backtest_t2.py  test_benchmark.py  test_bollinger_bands_condition.py  test_composite.py  test_daily_summary_cli.py  test_daily_summary_job_wiring.py  test_daily_summary_models.py  test_daily_summary_queries.py  test_daily_summary_render.py  test_day_of_week_condition.py  test_db_migrations.py  test_deflated_sharpe.py  test_deflated_sharpe_frequency_fix.py  test_downsample.py  test_dummy_job.py  test_engine.py  test_engines_consume_fee_model.py  test_engines_consume_slippage_model.py  test_exit_attribution.py  test_extract.py  test_extract_job.py  test_extraction_stateful.py  test_fee_model.py  test_fee_slippage_per_asset_class.py  test_ftr_cost_math.py  test_ftr_crash_recovery.py  test_ftr_data_quality.py  test_ftr_determinism_golden.py  test_ftr_drift_parity.py  test_ftr_ev_gate.py  test_ftr_guardrails_trip.py  test_ftr_label_alignment.py  test_ftr_liquidity_overlay.py  test_ftr_no_lookahead_features.py  test_ftr_paper_only.py  (+77 more)
workers/tests/cassettes/oanda/: .gitkeep  auth_failure_401.yaml  fetch_ohlcv_since_eurusd_1h_paginated.yaml  fetch_recent_ohlcv_eurusd_1h_200_candles.yaml  malformed_response.yaml  rate_limit_429.yaml
workers/tests/goldens/: ftr_determinism.sha256
(+202 files in other folders)
