# Root uv workspace.
#
# uv discovers each member's pyproject.toml and resolves a single
# `uv.lock` for all of them. Cross-member dependencies (e.g. api ->
# marketmind-shared) are resolved as editable installs, so changes
# in `shared/` show up live in `api/` and `workers/` without reinstalls.
[project]
name = "marketmind-ai"
version = "0.0.0"
description = "MarketMind AI — strategy research platform (workspace root)."
requires-python = ">=3.12,<3.13"
# The root depends on every workspace member so a single `uv sync` at the
# repo root installs all three (api, workers, shared) into the workspace
# venv. Without this, `uv sync` would install only the dev group, leaving
# runtime deps like fastapi/rq missing from the venv used by pytest.
dependencies = [
    "marketmind-api",
    "marketmind-workers",
    "marketmind-shared",
]

[tool.uv.workspace]
members = ["api", "workers", "shared"]

[tool.uv.sources]
marketmind-api = { workspace = true }
marketmind-workers = { workspace = true }
marketmind-shared = { workspace = true }

# Shared tool config — each member can override but defaults live here.
[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "build", "dist", "*.egg-info"]

[tool.ruff.lint]
# Curated rule set: pycodestyle, pyflakes, bugbear, isort, pyupgrade,
# simplify, comprehensions, naming, return-style, security (bandit),
# datetime gotchas, async correctness.
select = [
    "E", "W",      # pycodestyle
    "F",           # pyflakes
    "B",           # flake8-bugbear
    "I",           # isort
    "UP",          # pyupgrade
    "SIM",         # flake8-simplify
    "C4",          # flake8-comprehensions
    "N",           # pep8-naming
    "RET",         # flake8-return
    "S",           # flake8-bandit
    "DTZ",         # flake8-datetimez (catch naive datetimes)
    "ASYNC",       # flake8-async
    "RUF",         # ruff-specific
]
ignore = [
    "E501",        # line length handled by formatter
    "S101",        # asserts are fine in tests
    "RUF001",      # Unicode math symbols in strings (e.g., ×, →) are intentional
    "RUF002",      # Greek letters in docstrings (math formulas) are intentional
    "RUF003",      # Greek letters in inline comments are intentional
]

[tool.ruff.lint.per-file-ignores]
# Tests can use asserts, magic numbers, and untyped fixtures freely.
"**/tests/**" = ["S", "N802", "N803"]
"**/conftest.py" = ["S"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false  # FastAPI/SQLAlchemy decorators trip this constantly
reportUnknownVariableType = false
reportUnknownArgumentType = false
exclude = ["**/__pycache__", "**/.venv", "**/build", "**/dist", "**/node_modules"]
include = ["api/src", "workers/src", "shared/src"]
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["api/tests", "workers/tests", "shared/tests", "tests"]
python_files = ["test_*.py"]
# importlib mode avoids the "ImportPathMismatchError" you get when multiple
# tests/ directories live in the same workspace — pytest no longer relies
# on __init__.py to map test files to module names.
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--import-mode=importlib",
    "-m", "not integration and not live_api",  # opt-in via `pytest -m integration` / `-m live_api`
]
markers = [
    "integration: end-to-end tests requiring docker compose stack (opt-in)",
    "live_api: tests that hit real external APIs (Phase C C.1.6 Oanda smoke; opt-in via `pytest -m live_api`)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:rq.*",
]

[dependency-groups]
# Tools available across the workspace via `uv run`.
dev = [
    "ruff>=0.8.0",
    "pyright>=1.1.390",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "fakeredis>=2.26.0",
    "testcontainers[postgres,redis]>=4.8.0",
    "jsonschema>=4.26.0",
    # Phase C C.1.3 (2026-05-26): VCR-style cassette replay for the
    # OandaAdapter unit tests — every test under workers/tests/
    # cassettes/oanda/ replays from a YAML cassette, never hits the
    # network. vcrpy 7+ has native httpx support.
    "vcrpy>=7.0.0",
]
