[project]
name = "marketmind-shared"
version = "0.1.0"
description = "Shared Pydantic schemas and types used across MarketMind AI services."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.10.0,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/marketmind_shared"]
